c3prj1_deck/grade.txt
Grading at Mon Aug 12 04:38:56 UTC 2019
Compiling deck.c
deck.c: In function ‘add_card_to’:
deck.c:56:33: error: incompatible types when assigning to type ‘card_t * {aka struct card_tag *}’ from type ‘card_t {aka struct card_tag}’
  deck->cards[deck->n_cards - 1] = c; 
                                 ^
Could not compile your deck.c!

Overall Grade: FAILED
